--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="twitter:image" content="https://devtaskhub.com/assets/cmd-DZ6TwPzQ.jpg" />
     <link rel="canonical" href="https://devtaskhub.com" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
