--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#3b82f6" />
     <title>DevTaskHub | Κατασκευή Custom Ιστοσελίδων & Mobile Εφαρμογών</title>
     <meta name="description" content="DevTaskHub: Κατασκευή custom ιστοσελίδων, e-shop, mobile εφαρμογών, AI λύσεων και SEO στη Θεσσαλονίκη. Εξειδικευμένη ομάδα developers για επιχειρήσεις και επαγγελματίες. Responsive design, ταχύτητα, ασφάλεια, υποστήριξη." />
     <meta name="keywords" content="web developer Θεσσαλονίκη, κατασκευή ιστοσελίδων, web development, mobile apps, AI chatbots, ecommerce, SEO, devtaskhub, δημιουργία site, επαγγελματική ιστοσελίδα, digital agency" />
@@ -21,6 +22,13 @@
     <meta name="twitter:description" content="Κατασκευή custom ιστοσελίδων, e-shop, mobile apps, AI και SEO από εξειδικευμένη ομάδα στη Θεσσαλονίκη." />
     <meta name="twitter:image" content="https://devtaskhub.com/assets/cmd-DZ6TwPzQ.jpg" />
     <link rel="canonical" href="https://devtaskhub.com" />
+    <link rel="manifest" href="/manifest.json" />
+    <!-- Font Optimization: Preconnect for faster font loading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <!-- Google Fonts with display=swap for better performance -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
