--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover" />
     <meta name="theme-color" content="#3b82f6" />
     <title>DevTaskHub | Κατασκευή Custom Ιστοσελίδων & Mobile Εφαρμογών</title>
     <meta name="description" content="DevTaskHub: Κατασκευή custom ιστοσελίδων, e-shop, mobile εφαρμογών, AI λύσεων και SEO στη Θεσσαλονίκη. Εξειδικευμένη ομάδα developers για επιχειρήσεις και επαγγελματίες. Responsive design, ταχύτητα, ασφάλεια, υποστήριξη." />
