--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/src/assets/logo.png" as="image" type="image/png">
     <!-- Google Fonts with display=swap for better performance -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Defer non-critical scripts -->
+    <link rel="dns-prefetch" href="https://app.fastbots.ai">
   </head>
   <body>
     <div id="root"></div>
